--- a/Frontend/visitorlist.html
+++ b/Frontend/visitorlist.html
@@ -49,6 +49,7 @@
           <tr>
             <th>Name</th>
             <th>BesucherNummer</th>
+            <th>E-Mail</th>
             <th>Rolle</th>
           </tr>
         </table>
@@ -60,9 +61,11 @@
             <th>Name</th>
             <th>BesucherNummer</th>
             <th>Rolle</th>
+            <th>E-Mail</th>
             <th>CheckIn-Date</th>
             <th>CheckIn-Time</th>
             <th>Ansprechpartner</th>
+            <th>Aufenthaltsort</th>
           </tr>
         </table>
       </div>
@@ -83,6 +86,10 @@
         fetch('http://localhost:3000/run-python?function=besucherliste')
                 .then(response => response.text())
                 .then(data => {
+                  if (data == "") {
+                    console.log('Keine Besucher');
+                  }
+                  else {
                   var sepearetedData = data.split(/\r?\n|\r|\n/g);
                       for (let i = 0; i < sepearetedData.length; i++) {
                       const tabledata = sepearetedData[i].split(' ');
@@ -99,7 +106,11 @@
                       td3.innerText = tabledata[3];
                       tr.appendChild(td3);
                       tb.appendChild(tr);
+                      const td4 = document.createElement('td');
+                      td4.innerText = tabledata[4];
+                      tr.appendChild(td4);
                       }
+                  }
                 })
                 .catch(error => {
                     console.log(`Error: ${error.message}`);
@@ -107,6 +118,10 @@
             fetch('http://localhost:3000/run-python?function=aktuellebesucherliste')
                 .then(response => response.text())
                 .then(data => {
+                  if (data == "") {
+                    console.log('Keine Besucher');
+                  }
+                  else {
                   var sepearetedData = data.split(/\r?\n|\r|\n/g);
                       for (let i = 0; i < sepearetedData.length; i++) {
                       const tabledata = sepearetedData[i].split(' ');
@@ -132,10 +147,18 @@
                       tr.appendChild(td5);
                       tb2.appendChild(tr);
                       const td6 = document.createElement('td');
-                      td6.innerText = tabledata[6] + ' ' + tabledata[7];
+                      td6.innerText = tabledata[6];
                       tr.appendChild(td6);
                       tb2.appendChild(tr);
+                      const td7 = document.createElement('td');
+                      td7.innerText = tabledata[7];
+                      tr.appendChild(td7);
+                      tb2.appendChild(tr);
+                      const td8 = document.createElement('td');
+                      td8.innerText = tabledata[8];
+                      tr.appendChild(td8);
                       }
+                  }
                 })
                 .catch(error => {
                     console.log(`Error: ${error.message}`);
